# Project-Eva

./: .env.example  .gitignore  package-lock.json  pyproject.toml
generated-projects/: tailwind.config.js
generated-projects copy/: package-lock.json  package.json
generated-projects copy/src/: App.js
generated-projects copy/src/components/: Hero.js  Navbar.js
generated-projects/src/: App.js
generated-projects/src/components/: Calculator.js
generated_project/: README.md  calculator.py  index.html
generated_project/tests/: test_calculator.py
generated_project1/: app.js  index.html  style.css
generated_project2/: app.js  index.html  style.css  styles.css
generated_project3/: index.html  script.js  style.css
src/agents/: coder_agent.py
src/app/: app.py
src/chains/: architect_chain.py  coder_chain.py  planner_chain.py  test.py  test2.py  test3.py
src/graph/: state.py  workflow.py
src/llm/: llm_providers.py
src/nodes/: architect_node.py  coder_node.py  planner_node.py
src/prompts/: architecture_prompt.py  coder_chain_prompt.py  planner_chain_prompt.py
src/schemas/: architect_chain_schema.py  planner_chain_schema.py
src/tools/: general_file_tools.py
